--- a/nnpcai-website-redesign/src/pages/index.astro
+++ b/nnpcai-website-redesign/src/pages/index.astro
@@ -135,7 +135,7 @@ const footer = footerEntry.data;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-		object-position: center 35%;
+		object-position: center;
 		opacity: 1;
 		z-index: 0;
 	}
